Editor overflow issue solved

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -29,3 +29,11 @@ fa-icon {
   font-size: 1.6rem;
   padding: 5px;
 }
+
+.main-container {
+  display: flex;
+}
+
+.width-100pc {
+  width: 100%;
+}
